k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esm
  labels:
    app.kubernetes.io/part-of: esm
