k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esm-apps
  namespace: esm
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /login/index.php
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /odoo
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 80
          - path: /moodle
            pathType: Prefix
            backend:
              service:
                name: moodle
                port:
                  number: 80
